--- a/index.html
+++ b/index.html
@@ -4,24 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Successful</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-
-        .message {
-            font-size: 20px;
-            color: #4CAF50;
-            margin-bottom: 20px;
-        }
-    </style>
+    <title>Garuda Matka</title>
 </head>
 
 <body>
-    <div class="message">Your payment has been successfully added. Close the browser and login to the app.</div>
+    Payment Server.
 </body>
 
 </html>
