--- a/redirect_page.html
+++ b/redirect_page.html
@@ -4,11 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garuda Matka</title>
+    <title>Payment Successful</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+
+        .message {
+            font-size: 20px;
+            color: #4CAF50;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 
 <body>
-    Your Payment was completed successfully. Please go back to the app and check your wallet balance.
+    <div class="message">Your payment has been successfully added. Close the browser and login to the app.</div>
 </body>
 
 </html>
